--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "9.68.2",
-    "@react-three/fiber": "8.13.0",
-    "@react-three/postprocessing": "2.11.0",
-    "@types/three": "0.152.0",
+    "@react-three/drei": "9.77.3",
+    "@react-three/fiber": "8.13.3",
+    "@react-three/postprocessing": "2.14.11",
+    "@types/three": "0.152.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "6.0.0-rc.1",
-    "three": "0.152.2"
+    "styled-components": "6.0.0-rc.6",
+    "three": "0.153.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -27,6 +27,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2"
+    "vite": "4.3.9"
   }
 }
